BUG FIX: create testbed directory before installing scripts

--- a/tmcd/linux/GNUmakefile.in
+++ b/tmcd/linux/GNUmakefile.in
@@ -70,6 +70,7 @@ frisbee-mfs-install:	destdircheck
 			$(SYSETCDIR)/dhclient-exit-hooks
 	$(INSTALL) -m 755 $(SRCDIR)/dhclient-enter-hooks \
 			$(SYSETCDIR)/dhclient-enter-hooks
+	mkdir -p $(BINDIR)/testbed
 	#@if [ -r $(SRCDIR)/master.passwd ]; then \
 	#    $(INSTALL) -m 600 $(SRCDIR)/master.passwd $(SYSETCDIR); \
 	#    pwd_mkdb -d $(SYSETCDIR) $(SYSETCDIR)/master.passwd; \
