--- a/tmcd/linux/GNUmakefile.in
+++ b/tmcd/linux/GNUmakefile.in
@@ -70,7 +70,6 @@ frisbee-mfs-install:	destdircheck
 			$(SYSETCDIR)/dhclient-exit-hooks
 	$(INSTALL) -m 755 $(SRCDIR)/dhclient-enter-hooks \
 			$(SYSETCDIR)/dhclient-enter-hooks
-	mkdir -p $(BINDIR)/testbed
 	#@if [ -r $(SRCDIR)/master.passwd ]; then \
 	#    $(INSTALL) -m 600 $(SRCDIR)/master.passwd $(SYSETCDIR); \
 	#    pwd_mkdb -d $(SYSETCDIR) $(SYSETCDIR)/master.passwd; \
@@ -216,7 +215,7 @@ script-install:	dir-install $(SCRIPTS)
 	$(INSTALL) -m 755 $(SRCDIR)/chipset.awk $(BINDIR)/chipset.awk
 	$(INSTALL) -m 755 $(SRCDIR)/cpuspeed.awk $(BINDIR)/cpuspeed.awk
 	$(INSTALL) -m 755 $(SRCDIR)/rc.mfs $(BINDIR)/rc/rc.mfs
-	$(INSTALL) -m 755 $(SRCDIR)/control_interface $(BINDIR)/testbed
+	$(INSTALL) -m 755 $(SRCDIR)/control_interface $(BINDIR)/control_interface
 	$(INSTALL) -m 755 $(SRCDIR)/rc.frisbee $(BINDIR)/rc/rc.frisbee
 	$(INSTALL) -m 755 $(SRCDIR)/slicefix $(BINDIR)/slicefix
 	$(INSTALL) -m 755 $(SRCDIR)/freebsd_to_linux_disk $(BINDIR)/freebsd_to_linux_disk
@@ -225,8 +224,8 @@ script-install:	dir-install $(SCRIPTS)
 	$(INSTALL) -m 755 $(SRCDIR)/extract_kernel_info $(BINDIR)
 	$(INSTALL) -m 755 $(SRCDIR)/extract_initrd_info $(BINDIR)
 	$(INSTALL) -m 755 $(SRCDIR)/extract_image_info $(BINDIR)
-	$(INSTALL) -m 755 $(SRCDIR)/mount_bsd_slice $(SYSETCDIR)/testbed
-	$(INSTALL) -m 755 $(SRCDIR)/get_edd_map $(BINDIR)/testbed
+	$(INSTALL) -m 755 $(SRCDIR)/mount_bsd_slice $(BINDIR)
+	$(INSTALL) -m 755 $(SRCDIR)/get_edd_map $(BINDIR)
 	$(INSTALL) -m 755 -s ../findif $(BINDIR)/findif
 	$(INSTALL) -m 755 $(SRCDIR)/rc.linux $(BINDIR)/rc
 
