--- a/tmcd/linux/GNUmakefile.in
+++ b/tmcd/linux/GNUmakefile.in
@@ -52,6 +52,10 @@ destdircheck:
 	    false; \
 	fi
 
+subboss-install:	subboss-common-install etc-install \
+			sup-install script-install bin-install
+	@echo "Remember to install the PEM files if necessary"
+
 install client-install:	common-install etc-install \
 			sup-install script-install bin-install vserver-install
 	@echo "Remember to install the PEM files if necessary"
@@ -148,6 +152,9 @@ dir-install:
 
 common-install:	dir-install
 	(cd ../common; $(MAKE) DESTDIR=$(DESTDIR) local-install)
+
+subboss-common-install:	dir-install
+	(cd ../common; $(MAKE) DESTDIR=$(DESTDIR) subboss-local-install)
 
 sup-install:	dir-install supfile
 	$(INSTALL) -m 755 ./supfile $(ETCDIR)/supfile
