--- a/tmcd/freebsd6/GNUmakefile.in
+++ b/tmcd/freebsd6/GNUmakefile.in
@@ -40,6 +40,9 @@ INSTALL		= /usr/bin/install -c
 install client-install:	bincheck basefbsd-install etc-install \
 			sup-install script-install bin-install
 
+subboss-install:	bincheck basefbsd-subboss-install etc-install \
+			sup-install script-install bin-install
+
 simple-install:	script-install bin-install
 
 bincheck:
@@ -69,6 +72,12 @@ dir-install:
 
 basefbsd-install: dir-install
 	(cd ../freebsd5; $(MAKE) all install)
+	rm -f $(SYSETCDIR)/rc.conf.d/dhclient
+	rm -f $(DESTDIR)/usr/local/etc/dhclient*
+	ln -s /etc/dhclient* $(DESTDIR)/usr/local/etc/
+
+basefbsd-subboss-install: dir-install
+	(cd ../freebsd5; $(MAKE) all subboss-install)
 	rm -f $(SYSETCDIR)/rc.conf.d/dhclient
 	rm -f $(DESTDIR)/usr/local/etc/dhclient*
 	ln -s /etc/dhclient* $(DESTDIR)/usr/local/etc/
