Companion change to httpd.conf change.
Manually merged changes in protogeni-cm.pl.in into
geni-am.pl.in. These changes are in commit 56a47ccc3c (Apr 21, 2010;
Leigh Stoller).

SSL client verification is now "optional" in the server, so we have to
check more carefully in the script that the client supplied a proper
certificate.

Also, the server is now exporting the entire client certificate so
that we can pull out the URN from it. UUIDs are slowly being phased
out. This change requires some new ports installed on boss:

"p5-Crypt-OpenSSL-X509" => "/usr/ports/security/p5-Crypt-OpenSSL-X509",
"p5-Crypt-X509"         => "/usr/ports/security/p5-Crypt-X509"

--- a/protogeni/xmlrpc/geni-am.pl.in
+++ b/protogeni/xmlrpc/geni-am.pl.in
@@ -16,12 +16,14 @@ use Frontier::Responder;
 use Frontier::RPC2;
 use Data::Dumper;
 use POSIX;
+use Crypt::X509;
+use Crypt::OpenSSL::X509;
 
 # Yack. apache does not close fds before the exec, and if this dies
 # we are left with a giant mess.
 BEGIN {
     no warnings;
-    for (my $i = 3; $i < 2048; $i++) {
+    for (my $i = 3; $i < 1024; $i++) {
       POSIX:close($i);
     }
 }
@@ -79,6 +81,35 @@ $ENV{'MYUUID'} = $certificate->uuid();
 $ENV{'MYURN'} = "urn:publicid:IDN+@OURDOMAIN@+authority+cm";
 
 #
+# Helper function to return a properly formated XML error.
+#
+sub XMLError($$)
+{
+    my ($code, $string) = @_;
+
+    my $decoder = Frontier::RPC2->new();
+    print "Content-Type: text/xml \n\n";
+    print $decoder->encode_fault($code, $string);
+    exit(0);
+}
+
+#
+# Make sure the client presented a valid certificate that apache says
+# is okay.
+#
+# THIS HAS TO BE HERE! Why? Cause recent security patches disable SSL
+# renegotiation, which is needed when a subdir turns on ssl client
+# verification (as httpd.conf used to). Now, we set it to "optional",
+# which avoids the renegotiation problem, but we have to make that
+# this interface is always invoked by a client supplying a verifiable
+# certificate. 
+#
+if (! (exists($ENV{'SSL_CLIENT_VERIFY'}) &&
+       $ENV{'SSL_CLIENT_VERIFY'} eq "SUCCESS")) {
+    XMLError(-1, "Invalid or missing certificate");
+}
+
+#
 # In the prototype, we accept certificate signed by trusted roots
 # (CA certs we have locally cached). This script runs as "geniuser"
 # so that there is an emulab user context, or many of the scripts we
@@ -111,11 +142,35 @@ if (exists($ENV{'SSL_CLIENT_S_DN_CN'}) &&
     $ENV{'GENIUUID'} = $ENV{'SSL_CLIENT_S_DN_CN'};
 }
 else {
-    my $decoder = Frontier::RPC2->new();
-    print "Content-Type: text/xml \n\n";
-    print $decoder->encode_fault(-1, "Invalid certificate; no UUID");
-    exit(0);
+    XMLError(-1, "Invalid certificate; no UUID");
 }
+
+#
+# The CERT data from apache holds the URN of the caller. 
+#
+if (exists($ENV{'SSL_CLIENT_CERT'})) {
+    my $x509 = eval {
+	Crypt::OpenSSL::X509->new_from_string($ENV{'SSL_CLIENT_CERT'}); };
+    if ($@) {
+	XMLError(-1, "Invalid certificate: $@");
+    }
+    my $cert = $x509->as_string(Crypt::OpenSSL::X509::FORMAT_ASN1);
+    XMLError(-1, "Could not convert certificate to ASN1")
+	if (!defined($cert) || $cert eq '');
+    my $decoded = Crypt::X509->new( cert => $cert );
+    if ($decoded->error) {
+	XMLError(-1, "Error decoding certificate:" . $decoded->error);
+    }
+    foreach my $tmp (@{ $decoded->SubjectAltName }) {
+	if ($tmp =~ /^uniformResourceIdentifier=(.*)$/ ||
+	    $tmp =~ /^(urn:.*)$/) {
+	    $ENV{'GENIURN'} = $1;
+	}
+    }
+}
+XMLError(-1, "Invalid authentication certificate; no URN. Please regenerate.")
+    if (!exists($ENV{'GENIURN'}));
+
 #
 # Reaching into the Frontier code so I can debug this crap.
 #
@@ -144,9 +199,9 @@ Genixmlrpc->SetContext(Genixmlrpc->Context($certificate));
 
 if ($VERSION eq "1.0") {
     $responder = Frontier::Responder->new( "methods" => {
-	"GetVersion"    => \&GeniAM::GetVersion,
-	"ListResources" => \&GeniAM::ListResources,
-	"CreateSliver"  => \&GeniAM::CreateSliver,
+        "GetVersion"    => \&GeniAM::GetVersion,
+        "ListResources" => \&GeniAM::ListResources,
+        "CreateSliver"  => \&GeniAM::CreateSliver,
         "DeleteSliver"  => \&GeniAM::DeleteSliver,
         "SliverStatus"  => \&GeniAM::SliverStatus,
         "RenewSliver"   => \&GeniAM::RenewSliver,
@@ -154,10 +209,7 @@ if ($VERSION eq "1.0") {
     },);
 }
 else {
-    my $decoder = Frontier::RPC2->new();
-    print "Content-Type: text/xml \n\n";
-    print $decoder->encode_fault(-3, "Invalid API Version");
-    exit(0);
+    XMLError(-3, "Invalid API Version");
 }
 
 #
@@ -183,14 +235,6 @@ my $response = $responder->{'_decode'}->serve($request,
 
 # Add stuff for log message if sent.
 AddAuditInfo("message", $response . "\n\n" . $request);
-
-# When debugging on, generate some output so email is sent.
-if ($debug) {
-    my $decoder = Frontier::RPC2->new();
-    my $object  = $decoder->decode($response);
-    my $value   = $object->{'value'};
-    print STDERR Dumper($value);
-}
 
 #----------------------------------------------------------------------
 # Morph the ProtoGENI response (a hash with three keys; a
