Modified crossdomain.xml to allow flash programs from *.emulab.net.
Making crossdomain more permissive like this allows us to host the flash client on www.emulab.net which has a CA-certified certificate.

--- a/protogeni/scripts/initsite.in
+++ b/protogeni/scripts/initsite.in
@@ -245,8 +245,7 @@ if (! -e "$TB/www/protogeni") {
 $crosstext = <<'CROSSEND';
 <?xml version="1.0"?>
 <cross-domain-policy>
-    <allow-access-from domain="boss.emulab.net" />
-    <allow-access-from domain="users.emulab.net" />
+    <allow-access-from domain="*.emulab.net" />
     <allow-access-from domain="*.protogeni.net" />
 </cross-domain-policy>
 CROSSEND
