--- a/utils/create_image.in
+++ b/utils/create_image.in
@@ -10,7 +10,7 @@ use POSIX qw(setsid);
 use File::Basename;
 
 #
-# Tuneables:
+# Image Creation Tuneables.
 #
 # $maxwait	max wall clock time to allow, progress or not
 #		Empirically we have observed about 1.6MB/sec on a pc850
@@ -29,7 +29,27 @@ my $maxwait      = (72 * 60);
 my $idlewait     = ( 8 * 60);
 my $reportwait   = ( 2 * 60);
 my $checkwait    = 15;
-my $maximagesize = (20 * 1024**3); # 20GB
+my $maximagesize = (6 * 1024**3); # 20GB
+
+#
+# Use defaults from sitevars (if they exist) for some of these.
+#
+my $tmp;
+if (TBGetSiteVar("image/create/maxwait", \$tmp)) {
+    $maxwait = $tmp * 60;
+}
+if (TBGetSiteVar("image/create/idlewait", \$tmp)) {
+    $idlewait = $tmp * 60;
+}
+if (TBGetSiteVar("image/create/maxsize", \$tmp)) {
+    $maximagesize = $tmp * 1024**3;
+}
+$idlewait = $maxwait
+    if ($maxwait < $idlewait);
+$reportwait = $idlewait
+    if ($idlewait < $reportwait);
+$checkwait = $reportwait
+    if ($reportwait < $checkwait);
 
 #
 # Create a disk image.
