--- a/utils/create_image.in
+++ b/utils/create_image.in
@@ -32,26 +32,6 @@ my $checkwait    = 15;
 my $maximagesize = (6 * 1024**3); # 20GB
 
 #
-# Use defaults from sitevars (if they exist) for some of these.
-#
-my $tmp;
-if (TBGetSiteVar("image/create/maxwait", \$tmp)) {
-    $maxwait = $tmp * 60;
-}
-if (TBGetSiteVar("image/create/idlewait", \$tmp)) {
-    $idlewait = $tmp * 60;
-}
-if (TBGetSiteVar("image/create/maxsize", \$tmp)) {
-    $maximagesize = $tmp * 1024**3;
-}
-$idlewait = $maxwait
-    if ($maxwait < $idlewait);
-$reportwait = $idlewait
-    if ($idlewait < $reportwait);
-$checkwait = $reportwait
-    if ($reportwait < $checkwait);
-
-#
 # Create a disk image.
 #
 # XXX: Device file should come from DB.
@@ -173,6 +153,26 @@ if (defined($options{"p"})) {
 	    "    Bad data in $imagepid.\n");
     }
 }
+
+#
+# Reset default values from site variables if they exist.
+#
+my $tmp;
+if (TBGetSiteVar("images/create/maxwait", \$tmp)) {
+    $maxwait = $tmp * 60;
+}
+if (TBGetSiteVar("images/create/idlewait", \$tmp)) {
+    $idlewait = $tmp * 60;
+}
+if (TBGetSiteVar("images/create/maxsize", \$tmp)) {
+    $maximagesize = $tmp * 1024**3;
+}
+$idlewait = $maxwait
+    if ($maxwait < $idlewait);
+$reportwait = $idlewait
+    if ($idlewait < $reportwait);
+$checkwait = $reportwait
+    if ($reportwait < $checkwait);
 
 #
 # Verify user and get his DB uid and other info for later.
