--- a/protogeni/lib/GeniAM.pm.in
+++ b/protogeni/lib/GeniAM.pm.in
@@ -42,10 +42,11 @@ sub GetVersion()
 # XXX Still need to handle the slice urn code path.
 sub ListResources()
 {
-    my ($argref) = @_;
-    my $credentials = $argref->{'credentials'};
-    my $options = $argref->{'options'};
+    # my ($argref) = @_;
+    # my $credentials = $argref->{'credentials'};
+    # my $options = $argref->{'options'};
 
+    my ($credentials, $options) = @_;
     my $available = $options->{'geni_available'} || 0;
     my $compress = $options->{'geni_compress'} || 0;
     my $slice_urn = $options->{'geni_slice_urn'};
@@ -66,10 +67,7 @@ sub ListResources()
 # Create a sliver by allocating and starting resources.
 sub CreateSliver()
 {
-    my ($argref)    = @_;
-    my $slice_urn   = $argref->{'slice_urn'};
-    my $credentials = $argref->{'credentials'};
-    my $rspec       = $argref->{'rspec'};
+    my ($credentials, $slice_urn, $rspec) = @_;
 
     # Invoke CreateSliver
     my $create_args = {
@@ -86,15 +84,14 @@ sub CreateSliver()
     }
 
     # The create succeeded so gather the response info
-    my ($sliver_credential, $manifest_rspec) = GeniResponse::value($response);
+    my $listref = GeniResponse::value($response);
+    my ($sliver_credential, $manifest_rspec) = @{$listref};
     return GeniResponse->Create( GENIRESPONSE_SUCCESS, $manifest_rspec );
 }
 
 sub DeleteSliver()
 {
-    my ($argref)    = @_;
-    my $slice_urn   = $argref->{'slice_urn'};
-    my $credentials = $argref->{'credentials'};
+    my ($credentials, $slice_urn) = @_;
 
     # Invoke StopSliver
     my $stop_args = {
@@ -129,9 +126,7 @@ sub DeleteSliver()
 # just passes on to the CM SliverStatus operation.
 sub SliverStatus()
 {
-    my ($argref) = @_;
-    my $slice_urn = $argref->{'slice_urn'};
-    my $credentials = $argref->{'credentials'};
+    my ($credentials, $slice_urn) = @_;
 
     my $status_args = {
         'slice_urn' => $slice_urn,
@@ -176,10 +171,7 @@ sub SliverStatus()
 
 sub RenewSliver()
 {
-    my ($argref)        = @_;
-    my $slice_urn       = $argref->{'slice_urn'};
-    my $credentials     = $argref->{'credentials'};
-    my $expiration_time = $argref->{'expiration_time'};
+    my ($credentials, $slice_urn, $expiration_time) = @_;
 
     my $renew_args = {
         'slice_urn' => $slice_urn,
