Add copyrights to a few random files.

--- a/collab/exp-vis/fetch-vis.in
+++ b/collab/exp-vis/fetch-vis.in
@@ -1,7 +1,8 @@
 #!/usr/bin/perl -T
-
 #
-#
+# EMULAB-COPYRIGHT
+# Copyright (c) 2010 University of Utah and the Flux Group.
+# All rights reserved.
 #
 
 use strict;
