--- a/tbsetup/checknodes_daemon.in
+++ b/tbsetup/checknodes_daemon.in
@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 #
-# GENIPUBLIC-COPYRIGHT
+# EMULAB-COPYRIGHT
 # Copyright (c) 2009-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
