--- a/collab/exp-vis/write-vis-auth.proxy.in
+++ b/collab/exp-vis/write-vis-auth.proxy.in
@@ -1,4 +1,9 @@
 #!/bin/sh
+#
+# EMULAB-COPYRIGHT
+# Copyright (c) 2010 University of Utah and the Flux Group.
+# All rights reserved.
+#
 
 set -e 
 
