--- a/utils/remove_old_www.in
+++ b/utils/remove_old_www.in
@@ -1,4 +1,9 @@
 #!/bin/sh
+#
+# EMULAB-COPYRIGHT
+# Copyright (c) 2008 University of Utah and the Flux Group.
+# All rights reserved.
+#
 
 rm -f @prefix@/www/auth.html
 rm -f @prefix@/www/doc/emotes.html
