--- a/xmlrpc/sslxmlrpc_server.py.in
+++ b/xmlrpc/sslxmlrpc_server.py.in
@@ -1,6 +1,7 @@
 #!/usr/local/bin/python
 #
-# Copyright (c) 2005-2008, 2010 University of Utah and the Flux Group.
+# EMULAB-COPYRIGHT
+# Copyright (c) 2005-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 import sys
