--- a/testsuite/testswap/TBConfig.pm.in
+++ b/testsuite/testswap/TBConfig.pm.in
@@ -1,3 +1,8 @@
+#
+# EMULAB-COPYRIGHT
+# Copyright (c) 2009 University of Utah and the Flux Group.
+# All rights reserved.
+#
 package TBConfig;
 
 use SemiModern::Perl;
