Add two new triggers for secure boot
Add 'POWEROFF' and 'EMAILNOTIFY' state triggers - the idea is that
these will be used as triggers when a node enters the 'SECVIOLATION'
state in the secure reload path, to turn off the node and send
testbed-ops mail about it.

Not yet tested.

--- a/event/stated/stated.in
+++ b/event/stated/stated.in
@@ -823,6 +823,17 @@ sub stateTransition($$) {
 		handleCommand($node,$TBPOWERCYCLE);
 		next;
 	    };
+	    (/^$TBPOWEROFF$/) && do {
+		handleCommand($node,$TBPOWEROFF);
+		next;
+	    };
+            (/^EMAILNOTIFY$/) && do {
+		SENDMAIL($REALTBOPS,
+			 "STATED: $node entered state $newstate",
+			 "$node entered state $mode/$newstate from " .
+                         "$mode/$oldstate",
+			 "Stated Daemon <".$TBOPS.">");
+            };
 	    /^RELOADOLDMFS$/ && do {
 		my $frisbee_osid = TBNodeDiskloadOSID($node);
 		my $frisbee_name = DBQuerySingleFatal("select osname from os_info where osid=$frisbee_osid");
