Add a new timeout action; STATE
Allows the state_timeouts table to contain a new type of action
to take on timeout: STATE:newstate . This will force stated to
transition the node to newstate, and take any trigger actions
associated with that state.

We will use this to make timeouts in the secure reload path
force the node into the SECVIOLATION state.

Not yet tested.

--- a/event/stated/stated.in
+++ b/event/stated/stated.in
@@ -1052,6 +1052,11 @@ sub handleCtrlEvent($$) {
 		/^$TBTIMEOUTNOTIFY/ && do {
 		    notify("Node $node has timed out in state $mode/$state\n");
 		    last; };
+                /^STATE:([-\w\/]+)$/ && do {
+                    my $newstate = $1;
+                    # Force the node into a new state
+                    stateTransition($node,$newstate);
+                    last; };
 		notify("$node: Unknown Timeout Action: $action\n");
 	    }
 	    next;
