Add a few constants for the secureload state machine

--- a/db/libdb.pm.in
+++ b/db/libdb.pm.in
@@ -490,6 +490,9 @@ sub TBDB_NODESTATE_PXEWAKEUP()	{ "PXEWAKEUP"; }
 sub TBDB_NODESTATE_PXEFAILED()	{ "PXEFAILED"; }
 sub TBDB_NODESTATE_PXEBOOTING()	{ "PXEBOOTING"; }
 sub TBDB_NODESTATE_POWEROFF()	{ "POWEROFF"; }
+sub TBDB_NODESTATE_TPMSIGNOFF() { "TPMSIGNOFF"; }
+sub TBDB_NODESTATE_SECVIOLATION(){ "SECVIOLATION"; }
+sub TBDB_NODESTATE_MFSBOOTING() { "MFSBOOTING"; }
 
 sub TBDB_NODEOPMODE_ANY		{ "*"; } # A wildcard opmode
 sub TBDB_NODEOPMODE_NORMAL	{ "NORMAL"; }
@@ -500,6 +503,7 @@ sub TBDB_NODEOPMODE_NORMALv1	{ "NORMALv1"; }
 sub TBDB_NODEOPMODE_MINIMAL	{ "MINIMAL"; }
 sub TBDB_NODEOPMODE_PCVM	{ "PCVM"; }
 sub TBDB_NODEOPMODE_RELOAD	{ "RELOAD"; }
+sub TBDB_NODEOPMODE_SECURELOAD	{ "SECURELOAD"; }
 sub TBDB_NODEOPMODE_RELOADMOTE	{ "RELOAD-MOTE"; }
 sub TBDB_NODEOPMODE_RELOADPCVM	{ "RELOAD-PCVM"; }
 sub TBDB_NODEOPMODE_DELAY	{ "DELAY"; }
