Ignore URIs that are not publicids in SubjAltName.
If a certificate has more than one URI in the Subject Alt Name
extension field the last URI was chosen as the URN for the
certificate. This choice was made regardless of the prefix of the
URN. The regex was modified to look for URIs that begin with
"urn:publicid:" to increase the chance that the right one is chosen.

If a certificate has more than one URI that begins with
"urn:publicid:", the last one is chosen. This is an improvement over
the previous state wherein the last URI was chosen regardless of prefix.

--- a/protogeni/lib/GeniCertificate.pm.in
+++ b/protogeni/lib/GeniCertificate.pm.in
@@ -332,7 +332,7 @@ sub LoadFromFile($$)
 	} elsif( $line =~ /^\s+Authority Information Access:\s*$/ ) {
 	    $accessinfo = 1;
 	} elsif( $altname ) {
-	    m'^\s*URI:([-!#$%()*+,./0-9:;=?@A-Z_a-z~]+)\s*$' and $alturi = $1
+	    m'^\s*URI:(urn:publicid:[-!#$%()*+,./0-9:;=?@A-Z_a-z~]+)\s*$' and $alturi = $1
 		foreach split( /, /, $line );
 	    $altname = 0;
 	} elsif( $accessinfo ) {
