Made UUID checks optional, defaulted to on.
GeniCredential now exports $CHECK_UUID, a variable that controls UUID
checks on credentials. If set to a true value (like 1), UUID checks
are made. If set to a false value (like 0), the UUID checks are
skipped.

$GeniCredential::$CHECK_UUID defaults to enabled.

--- a/protogeni/lib/GeniCredential.pm.in
+++ b/protogeni/lib/GeniCredential.pm.in
@@ -33,7 +33,7 @@ use Time::Local;
 use overload ('""' => 'Stringify');
 
 # Exported variables
-use vars qw(@EXPORT_OK $LOCALSA_FLAG $LOCALCM_FLAG $LOCALMA_FLAG);
+use vars qw(@EXPORT_OK $LOCALSA_FLAG $LOCALCM_FLAG $LOCALMA_FLAG $CHECK_UUID);
 
 # Configure variables
 my $TB		   = "@prefix@";
@@ -51,7 +51,8 @@ my $OPENSSL	   = "/usr/bin/openssl";
 $LOCALSA_FLAG	   = 1;
 $LOCALCM_FLAG	   = 2;
 $LOCALMA_FLAG	   = 3;
-@EXPORT_OK	   = qw($LOCALSA_FLAG $LOCALCM_FLAG $LOCALMA_FLAG);
+$CHECK_UUID        = 1;  # Default to true, enabling uuid checks
+@EXPORT_OK	   = qw($LOCALSA_FLAG $LOCALCM_FLAG $LOCALMA_FLAG $CHECK_UUID);
 
 # Capability Flags.
 
@@ -291,9 +292,9 @@ sub CreateFromSigned($$;$)
 	if (!defined($uuid_node));
     my $this_uuid = $uuid_node->to_literal();
 
-    if (! ($this_uuid =~ /^\w+\-\w+\-\w+\-\w+\-\w+$/)) {
-	print STDERR "Invalid this_uuid in credential\n";
-	return undef;
+    if (! ($this_uuid =~ /^\w+\-\w+\-\w+\-\w+\-\w+$/) && $CHECK_UUID) {
+        print STDERR "Invalid this_uuid in credential\n";
+        return undef;
     }
 
     # Expiration
@@ -325,9 +326,10 @@ sub CreateFromSigned($$;$)
     return undef
 	if (!defined($target_certificate));
 
-    if (!($target_certificate->uuid() =~ /^\w+\-\w+\-\w+\-\w+\-\w+$/)) {
-	print STDERR "Invalid target_uuid in credential\n";
-	return undef;
+    if (!($target_certificate->uuid() =~ /^\w+\-\w+\-\w+\-\w+\-\w+$/)
+        && $CHECK_UUID) {
+        print STDERR "Invalid target_uuid in credential\n";
+        return undef;
     }
     if (!($target_certificate->hrn() =~ /^[-\w\.]+$/)) {
 	print STDERR "Invalid hrn in credential\n";
@@ -348,9 +350,10 @@ sub CreateFromSigned($$;$)
     return undef
 	if (!defined($owner_certificate));
 
-    if (!($owner_certificate->uuid() =~ /^\w+\-\w+\-\w+\-\w+\-\w+$/)) {
-	print STDERR "Invalid target_uuid in credential\n";
-	return undef;
+    if (!($owner_certificate->uuid() =~ /^\w+\-\w+\-\w+\-\w+\-\w+$/)
+        && $CHECK_UUID) {
+        print STDERR "Invalid target_uuid in credential\n";
+        return undef;
     }
     if (!($owner_certificate->hrn() =~ /^[-\w\.]+$/)) {
 	print STDERR "Invalid hrn in credential\n";
