Forgot a 'next' on Mike's last patch

--- a/event/stated/stated.in
+++ b/event/stated/stated.in
@@ -857,6 +857,7 @@ sub stateTransition($$) {
 			 "$node entered state $mode/$newstate from " .
                          "$mode/$oldstate",
 			 "Stated Daemon <".$TBOPS.">");
+		next;
             };
 	    /^RELOADOLDMFS$/ && do {
 		my $frisbee_osid = TBNodeDiskloadOSID($node);
