--- a/protogeni/lib/GeniCertificate.pm.in
+++ b/protogeni/lib/GeniCertificate.pm.in
@@ -133,7 +133,16 @@ sub hrn($)
 	return $1
 	    if ($1 ne "");
     }
+    # GENI AM compatibility with PlanetLab
+    # Use the URN from the Subject Alt Name to create the HRN
+    my ($authority, $type, $name) = GeniHRN::Parse($self->urn());
+    # Match authority up to the first colon, then add "." and name.
+    if ($authority =~ /^([^:]+):/) {
+        my $hrn = $1 . "." . $name;
+        return $hrn;
+    }
     print STDERR "Cannot find hrn inside DN: '" . $self->DN() . "'\n";
+    print STDERR "Cannot find hrn inside urn: '" . $self->urn() . "'\n";
     return "unknown";
 }
 sub email($)
@@ -372,6 +381,12 @@ sub LoadFromFile($$)
 	return undef;
     }
     
+    # GENI AM: CN might not be a UUID, so check it.
+    # If it is not a UUID, make one up.
+    if ($uuid !~ /^\w+\-\w+\-\w+\-\w+\-\w+$/) {
+        $uuid = GeniUtil::NewUUID();
+    }
+
     my $self          = {};
     $self->{'CERT'}   = {};
     $self->{'stored'} = 0;
